# aivmlib

./: .gitignore  Readme.md  pyproject.toml
.github/workflows/: deploy.yml
aivmlib/: __init__.py  __main__.py
aivmlib/schemas/: aivm_manifest.py
