[tool.poetry]
name = "aivmlib"
version = "1.0.0"
description = "Aivis Voice Model File (.aivm) Utility Library"
authors = ["Aivis Project <support@aivis-project.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
pydantic = "^2.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
